# hvloi_ccpp

./: .gitignore  README
VNK_DirtyTool/: README
VNK_DirtyTool/VNK_CGetoptExample/: CMakeLists.txt  README
VNK_DirtyTool/VNK_CGetoptExample/Include/: VNK_CGetoptExample.h
VNK_DirtyTool/VNK_CGetoptExample/Source/: VNK_CGO_Utils.c  VNK_CGO_Utils.h  VNK_CGetoptExample.c
VNK_DirtyTool/VNK_CGetoptExample/include/: VNK_CGetoptExample.h
VNK_DirtyTool/VNK_CGetoptExample/source/: VNK_CGO_Utils.c  VNK_CGO_Utils.h  VNK_CGetoptExample.c  VNK_VnkCgoUtils.c  VNK_VnkCgoUtils.h
VNK_DirtyTool/VNK_CheckLib/: CMakeLists.txt  README
VNK_DirtyTool/VNK_CheckLib/include/: VNK_CheckLib.h
VNK_DirtyTool/VNK_CheckLib/src/: VNK_CheckLib.c  VNK_LocalFunctions.c
VNK_DirtyTool/VNK_FILE_Pointer/: CMakeLists.txt  README
VNK_DirtyTool/VNK_FILE_Pointer/include/: VNK_BLogFilePointer.h
VNK_DirtyTool/VNK_LinkedListExample/: CMakeLists.txt  README
VNK_DirtyTool/VNK_LinkedListExample/include/: VNK_LinkedListExample.h
VNK_DirtyTool/VNK_LinkedListExample/source/: VNK_LinkedListExample.c  VNK_LinkedListFunctions.c
VNK_DirtyTool/VNK_ShellMauMe/: README
VNK_DirtyTool/VNK_ShellMauMe/Document/: HowThisWork.txt
VNK_DirtyTool/VNK_ShellMauMe/Install/: VNK_Install.bash
VNK_DirtyTool/VNK_ShellMauMe/Script/: VNK_MauMe.bash
VNK_DirtyTool/VNK_Socket/: CMakeLists.txt  README
VNK_DirtyTool/VNK_Socket/Document/: VNK_Design.txt
VNK_DirtyTool/VNK_Socket/Include/: VNK_LinuxSocketExample.h
VNK_DirtyTool/VNK_Socket/Source/: VNK_LinuxSocketExample.c  VNK_VNKSOC_Utilities.c  VNK_VNKSOC_Utilities.h
VNK_DirtyTool/VNK_Socket/include/: VNK_LinuxSocketExample.h
VNK_DirtyTool/VNK_Socket/source/: VNK_LinuxSocketExample.c  Why_There_Is_DotH_Here.txt
VNK_DirtyTool/VNK_c_sscanf_zzz/: README
VNK_DirtyTool/VNK_c_sscanf_zzz/include/: vnk_sscanf_exp_main.h
VNK_DirtyTool/VNK_getopt_example/: README
VNK_DirtyTool/VNK_getopt_example/script/: VNK_getopt.bash
VNK_DirtyTool/c_sscanf_zzz/src/: vnk_sscanf_exp_main.c
VNK_Document/VNK_General/: NothingThere.txt
VNK_Document/VNK_Template/: CMakeList.txt.template.txt  ScriptHeadingFormat.txt  SourceHeadingFormat.txt
VNK_Learning/: README
VNK_Learning/VNK_uddsoc/: CMakeLists.txt  README
VNK_Learning/VNK_uddsoc/Include/: VNK_uuddsoc.h
VNK_Learning/VNK_uddsoc/Source/: VNK_uuddsoc_main.c
VNK_Library/VNK_LibNotify/: CMakeLists.txt  README  VNK_LibNotify.pc.in
VNK_Library/VNK_LibNotify/Source/: vnk_lib_notify.c
VNK_Library/VNK_LibNotify/VNK_LibNotiValidator/: CMakeLists.txt  README
VNK_Library/VNK_LibNotify/VNK_LibNotiValidator/Include/: LibNotifyValidator.h
VNK_Library/VNK_LibNotify/VNK_LibNotiValidator/Source/: LibNotiTestFunctions.c  LibNotifyValidator.c
VNK_Library/VNK_LibNotify/include/: vnk_lib_notify.h
VNK_Library/tlpi-190930-dist/: CHANGES
VNK_Library/tlpi-190930-dist/namespaces/: ns_run.c
VNK_POSIX_MQ/include/: README
VNK_POSIX_MQ/src/: vnk_mq_communi.c  vnk_mq_retrieve.c  vnk_mq_unlink.c  vnk_notify.c
VNK_PosixMQ/: CMakeLists.txt  README
VNK_PosixMQ/include/: vnk_mq_poxis.h
VNK_PosixMQ/src/: vnk_mq_ThreadNoti.c  vnk_mq_ThreadNoti.h  vnk_mq_create.c  vnk_mq_main.c  vnk_mq_sigNoti.c  vnk_mq_sigNoti.h  vnk_mq_tumlum.c
VNK_TemplateModule/: CMakeLists.txt  README
VNK_TemplateModule/Include/: VNK_TemplateModule.h
VNK_TemplateModule/Source/: VNK_TemplateModule.c  VNK_TemplateModule_Local.h
VNK_TemplateModule/include/: VNK_TemplateModule.h
VNK_TemplateModule/source/: VNK_TemplateModule.c  VNK_TemplateModule_Local.h
posix_message_queue/include/: README
vnk_build/: build.bash
vnk_doc/: c_header_format.txt  header_format.txt  shell_header_format.txt
vnk_doc/VNK_Template/: CMakeList.txt.template.txt  ScriptHeadingFormat.txt  SourceHeadingFormat.txt  vnk_mbuild.bash.template.txt
vnk_lib/VNK_LibNotify/: CMakeLists.txt
vnk_lib/VNK_LibNotify/include/: vnk_lib_notify.h
vnk_lib/VNK_LibNotify/src/: vnk_lib_notify.c
vnk_posix_message_queue/: CMakeLists.txt  Makefile
vnk_posix_message_queue/design/: vnk_poxis_mq_design.txt
vnk_posix_message_queue/include/: README  vnk_mq_poxis.h  vnk_notify.h
vnk_posix_message_queue/src/: main.c  vnk_mq_create.c  vnk_mq_edit.c  vnk_mq_main.c  vnk_mq_retrieve.c  vnk_mq_tumlum.c  vnk_mq_unlink.c  vnk_notify.c
vnk_posix_message_queue/src/mq_create/: mq_create.c
vnk_tools_and_stuff/VNK_CheckLib/: CMakeLists.txt
vnk_tools_and_stuff/VNK_FILE_Pointer/: CMakeLists.txt  README
vnk_tools_and_stuff/VNK_FILE_Pointer/include/: VNK_BLogFilePointer.h
vnk_tools_and_stuff/VNK_FILE_Pointer/src/: VNK_BlogFilePointer.c
vnk_tools_and_stuff/c_sscanf_zzz/: CMakeLists.txt
vnk_tools_and_stuff/vnk_prog_looper/: vnk_proglooper.bash
